Product_Controller Angular

--- a/Cibertec.Angular/Cibertec.Angular.csproj
+++ b/Cibertec.Angular/Cibertec.Angular.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Sass\base\_site.scss" />
+    <Content Include="Sass\directives\_product-card.scss" />
+    <Content Include="Sass\helpers\_colors.scss" />
+    <Content Include="Sass\helpers\_mixin.scss" />
+    <Content Include="Sass\site.scss" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
