--- a/Cibertec.Angular/Cibertec.Angular.csproj
+++ b/Cibertec.Angular/Cibertec.Angular.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="wwwroot\app\private\customer\directives\customer-form\" />
   </ItemGroup>
 
 </Project>
