publicacion_angular_en_iis

--- a/Cibertec.Angular/appsettings.json
+++ b/Cibertec.Angular/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConfigurationFile": {
-    "WebApiUrl": "http://localhost:1208/api"
+    "WebApiUrl": "http://localhost/cibertec/api"
   },
   "Logging": {
     "IncludeScopes": false,
